# llm-semantic-cache

./: .gitignore  Makefile  README.md  pyproject.toml
scripts/: demo.py
src/llm_semantic_cache/: __init__.py  app.py  cache.py  embedder.py  metrics.py  store.py
tests/: test_cache.py  test_embedder.py  test_store.py
