[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-semantic-cache"
version = "0.1.0"
description = "Semantic cache for LLM calls: skip the model when a similar prompt was already answered."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Krishna Gove", email = "krishnagove88@gmail.com" }]
keywords = ["llm", "cache", "embeddings", "cost-optimization", "fastapi"]

dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
